tests/NormalTests/paczka1/fuzzy1/55847527.err
Error in line 2: HkvEBy S284 8,3
Error in line 17: XJKsAM5Dm S804 32,70
Error in line 18: swaGWI A137 73,4
Error in line 21: swaGWI S284 70,8
Error in line 22: jUwLd0d6N A137 30,9
